--- a/Catalog.html
+++ b/Catalog.html
@@ -30,7 +30,7 @@
           </div>
           <div class="button-order-private">
             <div class="button-link">
-              <a href="" class="button-private" type="button">Равшан Джамшутович</a>
+              <a href="" class="button-private">Равшан Джамшутович</a>
               <a class="button-private-exit" href=""></a>
             </div> 
             <div class="private-nav">
@@ -58,29 +58,96 @@
           <ul class="catalog-navigation no-bulites">
             <li><a href="Catalog.html">Каталог</a></li>
             <li><a href="">Инструмент</a></li>
-            <li><a href="">Перфораторы</a></li>
+            <li><a>Перфораторы</a></li>
           </ul>
           <div class="catalog-heading">
             <h2>Перфораторы</h2>
           </div>
         </div>
         <section class="catalog-block">
+          <h2></h2>
           <div class="catalog-block-product">
             <div class="catalog-filter">
               <div class="catalog-filter-form">
                 <span>Фильтр:</span>
               </div>
               <div class="catalog-filter-sorting">
-                <span>Сортировка</span>
+                <span>Сортировка:</span>
                 <ul class="catalog-sorting no-bulites">
-                  <li><a href="">По цене</a></li>
+                  <li><a class="active" href="">По цене</a></li>
                   <li><a href="">По типу</a></li>
                   <li><a href="">По функционалу</a></li>
-                  <li><a href="" class="catalog-sorting-up"></a></li>
+                </ul>
+                <ul class="no-bulites">
+                  <li><a href="" class="catalog-sorting-up active"></a></li>
                   <li><a href="" class="catalog-sorting-down"></a></li>
                 </ul>
               </div>
-              <!--Форма фильтра-->
+            </div>
+            <div class="catalog-block-filter">         
+              <form action="https//echo.htmlacademy.ru" method="post">
+                <fieldset class="filter-priсe">
+                  <legend>Цена:</legend>
+                  <div class="range-price">
+                    <div class="range-slider">
+                      <div class="scale">
+                        <div class="bar">
+                        </div>
+                      </div>
+                      <div class="toggle toggle-min"></div>
+                      <div class="toggle toggle-max"></div>
+                    </div>
+                    <div class="range-conclusion">
+                      <label class="min-price">
+                        <input type="number" name="min-price" value="0">
+                      </label>
+                      <label class=max-price>
+                        <input type="number" name='max-price' value="30000">
+                      </label>
+                    </div>
+                </fieldset>
+                <fieldset class="filter-manufactures">
+                  <legend>Производители:</legend>
+                  <ul class="checkbox-manufactures no-bulites">
+                    <li class="checkbox-custom">
+                      <input type="checkbox" name="bosch" id="bosch-field" checked>
+                      <label for="bosch-field">Bosch</label>
+                    </li>
+                    <li class="checkbox-custom">
+                      <input type="checkbox" name="interskol-field" id="interskol-field">
+                      <label for="interskol-field">Интерскол</label>
+                    </li>
+                    <li class="checkbox-custom">
+                      <input type="checkbox" name="makita-field" id="makita-field" checked>
+                      <label for="makita-field">Makita</label>
+                    </li>
+                    <li class="checkbox-custom">
+                      <input type="checkbox" name="dewalt-field" id="dewalt-field">
+                      <label for="dewalt-field">Dewalt</label>
+                    </li>
+                    <li class="checkbox-custom">
+                      <input type="checkbox" name="hitachi-field" id="hitachi-field">
+                      <label for="hitachi-field">Hitachi</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <fieldest class="filter-feed">
+                  <legend>Питание:</legend>
+                  <ul class="radio-feed no-bulites">
+                    <li>
+                      <input type="radio" name="radio-battery" id="radio-battery">
+                      <label for="radio-battery">Аккумуляторные</label>
+                    </li>
+                    <li>
+                      <input type="radio" name="radio-network" id="radio-network">
+                      <label for="radio-network">Сетевые</label>
+                    </li>
+                  </ul>
+                </fieldest>
+              </form>
+              <div class="filtr-button-show">
+                <button type="button" class="filtr-button">Показать</button>
+              </div>
             </div>
             <ul class="products-list-catalog no-bulites">
               <li class="products-item">
@@ -92,7 +159,7 @@
                   <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">25&nbsp500&nbspр.</a>
+                <a class="button-products" href="#openModalMap">25&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -103,7 +170,7 @@
                   <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">23&nbsp500&nbspр.</a>
+                <a class="button-products" href="">23&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -114,7 +181,7 @@
                   <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp500&nbspр.</a>
+                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -125,7 +192,7 @@
                   <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp500&nbspр.</a>
+                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -136,7 +203,7 @@
                   <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">25&nbsp500&nbspр.</a>
+                <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -146,8 +213,8 @@
                 <figure class="products-item-image">
                   <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
-                <span>Перфоратор BOSCH <br>BFG 2000<br></del></span>
-                <a class="button-products" href="">12&nbsp500&nbspр.</a>
+                <span>Перфоратор BOSCH <br>BFG 2000<br></span>
+                <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -158,7 +225,7 @@
                   <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp500&nbspр.</a>
+                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -169,7 +236,7 @@
                   <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">25&nbsp500&nbspр.</a>
+                <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -179,12 +246,20 @@
                 <figure class="products-item-image">
                   <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
-                <span>Перфоратор BOSCH <br>BFG 2000<br></del></span>
-                <a class="button-products" href="">12&nbsp500&nbspр.</a>
-              </li>  
+                <span>Перфоратор BOSCH <br>BFG 2000<br></span>
+                <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
+              </li>
+              <div id="openModalBay" class="modalBay">
+                <p>Товар добавлен в корзину!</p>
+                <div class="modalBay-nav">
+                  <button>Оформить заказ</button>
+                  <button>Продолжить покупки</button>
+                </div>
+                <a class="modalLost-close"></a>
+              </div> 
             </ul>  
             <ul class="products-list-navigation no-bulites">
-              <li><a href="">1</a></li>
+              <li><a class="active" href="">1</a></li>
               <li><a href="">2</a></li>
               <li><a href="">3</a></li>
               <li><a href="">Следующая</a></li>
@@ -217,7 +292,7 @@
               <div class="footer-cat no-bulites">
                 <div class="footer-cat-addres">
                   <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-                  <a href="tel:88125550555">+7 (812) 555-05-55</a></li>
+                  <a href="tel:88125550555">+7 (812) 555-05-55</a>
                 </div>
                 <ul class="footer-cat-nav no-bulites">
                   <li><a href="">Материалы</a></li>
@@ -237,28 +312,19 @@
             </div>
             <div>  
               <ul class="footer-social no-bulites">
-                <li class="social">
+                <li class="social-vk social">
                   <a href="">
-                    <svg width="26" height="15" viewBox="0 0 26 15" transform="translate(8, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.5403 11.7281C16.4609 11.4384 17.6396 13.6406 18.8943 14.4834C19.8361 15.1219 20.5573 14.9841 20.5573 14.9841L23.9017 14.9372C23.9017 14.9372 25.6495 14.8322 24.8233 13.4803C24.7549 13.3678 24.3389 12.4781 22.334 10.6472C20.2376 8.73186 20.5217 9.04218 23.0456 5.73093C24.5835 3.71249 25.1988 2.47968 25.0062 1.95468C24.8213 1.44936 23.6918 1.58061 23.6918 1.58061L19.9237 1.60593C19.5568 1.60686 19.2458 1.71749 19.1042 2.08874C19.1013 2.09249 18.5062 3.65061 17.7127 4.9753C16.0362 7.77749 15.367 7.92655 15.0896 7.75124C14.4531 7.3453 14.6139 6.1228 14.6139 5.25374C14.6139 2.5378 15.0299 1.4053 13.7993 1.1128C13.3881 1.0153 13.0876 0.951552 12.039 0.942177C10.6985 0.922489 9.5603 0.942177 8.91511 1.25061C8.4866 1.45968 8.15822 1.91811 8.35756 1.94436C8.60793 1.97718 9.16934 2.09436 9.46978 2.49374C9.85593 3.01124 9.84437 4.17093 9.84437 4.17093C9.84437 4.17093 10.0649 7.36874 9.32437 7.7653C8.81593 8.03718 8.12067 7.48218 6.62519 4.9378C5.86156 3.63655 5.28474 2.19843 5.28474 2.19843C5.28474 2.19843 5.17304 1.93124 4.97082 1.78499C4.73008 1.61155 4.39304 1.55624 4.39304 1.55624L0.816594 1.57874C0.816594 1.57874 0.279261 1.59374 0.0818532 1.82436C-0.0934061 2.02874 0.0674088 2.45061 0.0674088 2.45061C0.0674088 2.45061 2.86867 8.90155 6.04067 12.1509C8.94882 15.1341 12.2537 14.9362 12.2537 14.9362H13.7511C13.7511 14.9362 14.2027 14.8856 14.4339 14.6437C14.6496 14.4187 14.6399 13.9959 14.6399 13.9959C14.6399 13.9959 14.6101 12.0187 15.5403 11.7281Z" fill="white"/>
-                    </svg> 
-                  <span class="social-hidden">Вконтакте</span> 
+                    <span class="social-hidden">Вконтакте</span> 
                   </a> 
                 </li>
-                <li class="social">
+                <li class="social-face social">
                   <a href="">
-                    <svg width="12" height="22" viewBox="0 0 12 22" transform="translate(15, 9)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
-                    </svg>
                     <span class="social-hidden">Фейсбук</span>
                   </a>
                 </li>
-                <li class="social">
+                <li class="social-inst social">
                   <a href="">
-                    <svg width="21" height="21" viewBox="0 0 21 21"  transform="translate(10, 9)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
-                    </svg>
-                    <span class="social-hidden" href="">Инстаграмм</span>
+                    <span class="social-hidden">Инстаграмм</span>
                   </a>
                 </li>
               </ul>
@@ -271,7 +337,6 @@
             </div>
           </div> 
         </div>
-        </section>
       </footer>
     </body>
   </html>
